# crs

./: .gitignore  Cargo.toml  LICENSE  README.md  getting-started.html  index.html  installation.html  justfile  not-found.html  print.html  searchindex.js  searchindex.json  why.html
.github/workflows/: check.yml  deploy.yml  emoji.yml  main.yml  rust-clippy.yml
.trunk/: trunk.yaml
create-a-template/: CRSTemplate.json.html  crs.json.html  index.html  structure.html
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  installation.md  not-found.md  why.md
docs/src/create-a-template/: CRSTemplate.json.md  README.md  crs.json.md  structure.md
locales/: de.json  de.yml  en.json  en.yml  fr.json  fr.yml
locales/fr/: en.json
src/: data.json  main.rs  template.hbs
