[package]
name = "crs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.1"
serde_json = "1.0.81"
serde_derive = "1.0.75"
serde = "1.0.0"
env_logger = "0.9"
git2 = "0.14.4"
clap = { version = "3.1.18", features = ["derive"] }
url = "2.2.2"
walkdir = "2"
platform-dirs = "0.3.0"
chrono = "0.4.19"
inquire = "0.2.1"