[package]
name = "crs"
version = "0.1.0"
edition = "2021"
description = "A simple project generator."
license = "GPL-3.0-or-later OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.1"
serde_json = "1.0.82"
serde_derive = "1.0.75"
serde = "1.0.138"
env_logger = "0.9"
git2 = "0.14.4"
clap = { version = "3.2.8", features = ["derive"] }
url = "2.2.2"
walkdir = "2"
platform-dirs = "0.3.0"
chrono = "0.4.19"
inquire = "0.2.1"
regex = "1"
execute = "0.2.11"
fs_extra = "1.2.0"
os-release-rs = "0.1.0"
clap_complete = "3.2.3"
